# Messenger

./: .gitignore  .gitmodules  CMAKELists.txt  CMakeLists.txt  Client.cpp  Market  MarketUML  OwnMarket  Readme.md  Server.cpp  Server.hpp  Session.cpp  Session.hpp  instulling_submodules.sh  main.cpp
Client/: CMakeLists.txt  ClientApp.cpp  client.cpp  client_old.cpp
Client/Client_gui/: CApplication.cpp  CApplication.h  CConverter.cpp  CConverter.h  CDisplay.cpp  CDisplay.h  CInform.cpp  CInform.h  CInputWindow.cpp  CInputWindow.h  CMakeLists.txt  CMenu.cpp  CMenu.h  CUnsupportedInput.cpp  CUnsupportedInput.h  CWindow.cpp  CWindow.h
Client/Client_network/: CMakeLists.txt
Server/: CMakeLists.txt  EndPoint.cpp  EndPoint.hpp  Json.cpp  Json.hpp  Server.cpp  Server.hpp  ServerApp.cpp  Session.cpp  Session.hpp
Server/API/: CMakeLists.txt  EndPoint.cpp  EndPoint.hpp  Json.hpp  PostgresAdapter.cpp  PostgresAdapter.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  URI.hpp
Server/Collector/: AuthCollectorBase.cpp  AuthCollectorBase.hpp  AuthSessionBase.cpp  AuthSessionBase.hpp  CMakeLists.txt  TempDataBase.hpp
